[tool.poetry]
name = "repl_python3_comp100-2021f-ps0-hasanoeztekin-1"
version = "0.1.0"
description = ""
authors = ["HASANOZTEKIN <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
